:lipstick: Subcategory > Entity list > Fix Arabic text alignment

--- a/src/components/SlideEntity/style.scoped.scss
+++ b/src/components/SlideEntity/style.scoped.scss
@@ -16,6 +16,10 @@
     text-overflow: ellipsis;
     **/
 
+    .ar & {
+        text-align: right;
+    }
+
     @include respond-to('medium') {
         color: var(--color-theme-secondary);
 
